--- a/Assignment2/sent_enc_nli_sick_mod/README
+++ b/Assignment2/sent_enc_nli_sick_mod/README
@@ -1,4 +1,16 @@
-Modification of LSTM network for predicting semantic relatedness of SICK dataset instead of text entailment classification. 
+Modification of LSTM deep learning network for predicting semantic relatedness of SICK dataset instead of text entailment classification. 
 
 Original script by Qian Chen:
 "Enhanced LSTM for Natural Language Inference" Qian Chen, Xiaodan Zhu, Zhenhua Ling, Si Wei, Hui Jiang, Diana Inkpen. ACL (2017)
+
+Written and executed with:
+Python 2.7.13
+Theano 0.9.0
+Numpy 1.13.3
+
+To use:
+1) Run build_dictionary.py from its location
+2) Run train.sh
+
+GloVe embeddings: http://nlp.stanford.edu/data/glove.6B.zip
+Word2Vec: https://drive.google.com/file/d/0B7XkCwpI5KDYNlNUTTlSS21pQmM/edit?usp=sharing (convert to txt first)
